clarify Java main method version behavior